# Clight

./: .build.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  makefile  module.skel  org.clight.screenbrightness.pkexec.policy
.github/ISSUE_TEMPLATE/: bug_report.md  custom-module-proposal.md  feature_request.md
.github/ISSUE_TEPLATE/: Feature_request.md
.github/workflows/: ci.yaml  codeql.yaml
Arch/: PKGBUILD  clight.install
DEBIAN/: control
Debian/: clight_0.9_amd64.deb
Extra/: _clight  clight  clight.conf  clight.service  module.skel  org.clight.clight.service
Extra/completions/: _clight  clight  clight.fish
Extra/config/: clight.conf
Extra/config/modules.conf.d/: backlight.conf  daytime.conf  dimmer.conf  dpms.conf  gamma.conf  inhibit.conf  keyboard.conf  screen.conf  sensor.conf
Extra/desktop/: clight.desktop  clightc.desktop
Extra/man/: clight.1
Extra/skeletons/: README.md  daytime.skel  inhibit_bl.skel  nightmode.skel  synctemp_bumblebee.skel
Extra/systemd/: clight.service  clight.timer
ISSUE_TEPLATE/: Bug_report.md
clight/: .gitignore  README.md  TODO  TODO.md  makefile
clight/Arch/: PKGBUILD  clight.install
clight/DEBIAN/: control
clight/inc/: brightness.h  bus.h  commons.h  config.h  gamma.h  location.h  log.h  opts.h  position.h  utils.h
clight/src/: brightness.c  bus.c  clight.c  config.c  dpms.c  gamma.c  location.c  log.c  opts.c  position.c  signal.c  utils.c
clightd/: .gitignore  README.md  TODO  TODO.md  makefile
clightd/Arch/: PKGBUILD
clightd/DEBIAN/: control
clightd/Scripts/: org.clight.backlight.conf  org.clight.backlight.policy  org.clight.backlight.service  org.clightd.backlight.conf  org.clightd.backlight.policy  org.clightd.backlight.service
clightd/inc/: camera.h  commons.h  gamma.h
clightd/src/: camera.c  clightd.c  gamma.c
inc/: brightness.h  brightness_smooth.h  bus.h  camera.h  clightd.h  commons.h  config.h  dimmer.h  dimmer_smooth.h  dpms.h  gamma.h  gamma_smooth.h  inhibit.h  interface.h  location.h  lock.h  log.h  math_utils.h  modules.h  network.h  opts.h  signal.h  timer.h  upower.h  userbus.h  utils.h  weather.h  xorg.h
src/: brightness.c  brightness_smooth.c  bus.c  camera.c  clight.c  clightd.c  commons.h  config.c  dimmer.c  dimmer_smooth.c  dpms.c  gamma.c  gamma_smooth.c  idler.c  idler.h  inhibit.c  interface.c  location.c  lock.c  log.c  main.c  math_utils.c  modules.c  modules.h  network.c  opts.c  public.h  signal.c  timer.c  topics.c  topics.h  upower.c  userbus.c  utils.c  weather.c  xorg.c
src/conf/: config.c  config.h  opts.c  opts.h
src/modules/: backlight.c  backlight.h  brightness.c  brightness.h  bus.c  bus.h  clightd.c  daytime.c  dimmer.c  display.c  dpms.c  dpms.h  gamma.c  idle.c  inhibit.c  interface.c  interface.h  keyboard.c  location.c  pm.c  screen.c  signal.c  upower.c  userbus.c  wizard.c  xorg.c
src/pubsub/: topics.c  validations.c  validations.h
src/utils/: idler.c  idler.h  lock.c  lock.h  log.c  log.h  my_math.c  my_math.h  timer.c  timer.h  utils.c  utils.h  validations.c  validations.h
